packages/isar/test/errors/property/enum_float_type.dart
// unsupported enum property type

import 'package:isar/isar.dart';

@collection
class Model {
  Id? id;

  late MyEnum field;
}

enum MyEnum {
  optionA;

  @enumValue
  final float value = 5.5;
}
